# FluxAgentProV2

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  check_git.py  check_mp.py  check_new.py  claude_desktop_config.json  compare_seeds.py  count_tools.py  launch.sh  mcp-analisis-FINAL.md  pyproject.toml  rerun_expand.py  test_extract.py
.qwen/: settings.json  settings.json.orig
LAST/: Requirements-agt.md  analisis-FINAL.md  analisis-antigravity.md  analisis-atg.md  analisis-claude.md  analisis-kilo.md  analisis-oc.md
dashboard/: .env.local.example  build-output-2.txt  build-output.txt  middleware.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/: service_catalog_seed.json  service_catalog_seed.json.bak
docs/: ARCHITECTURE.md  FAP-CrewAI-Implementation-Guide.html  FAP-CrewAI-Implementation-Guide.md  FAP-Phace5-Dashboard+CoctelProDemo.md  FAP-Phase1-BaseEngine.md  FAP-Phase2-Governance.md  FAP-Phase7-ImplementationPlan.md  FAP-Phase7-Presentation.md  FAP-Phase8-Semana 2.md  FASE1-FinalDefinition.html  FASE4-FinalDefinition.md  FASE6-FinalDefinition.md  FASE8-Week2-FinalDefinition.md  LAUNCH_GUIDE.md  PLAN_MIGRACION_SHADCN.md  estado-fase.md  mcp-analisis-final.md  mcp-analisis-finalV2.md  mvp-Definition.md  plan.md
scratch/: check_ac.py  check_db.py  check_skipped.py  check_tool.py  count_prompts.py  debug_realtime.py  final_scan.py  inspect_analytical.py  test_db.py  validate_seed.py  verify_counts.py  verify_none.py
scripts/: clean_demo_tasks.py  clean_orgs.py  debug_db.py  demo_coctel.py  demo_coctel_auto.py  (+14 more)
(+491 files in other folders)
