[project]
name = "fluxagentpro-v2"
version = "0.1.0"
description = "AI Agent Orchestration Engine — Phase 1: Foundation"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "supabase>=2.10.0",
    # LLM
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    # Auth (Phase 5)
    "python-jose[cryptography]>=3.3.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "litellm>=1.83.0",
]

[project.optional-dependencies]
crew = [
    "crewai>=0.100.0",
    "crewai-tools>=0.20.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
